syntax = "proto3";
package proto.login_service.v1;

option java_multiple_files = true;
option java_package =  "com.abhijith.login_service.v1";

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  string b_token = 1;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}
